--- a/src/components/tv-seasons/tv-seasons.styles.scss
+++ b/src/components/tv-seasons/tv-seasons.styles.scss
@@ -10,7 +10,7 @@
     padding: 0 0 0 2.5rem;
 
     @media screen and (max-width: 768px) {
-      display: flex;
+      display: grid;
       flex-direction: column;
       grid-template-columns: 1fr;
     //   gap: 1rem;
